<resources>
    <!--Common-->
    <string name="app_name">BayarTol</string>
    <string name="home">Beranda</string>
    <string name="history">Riwayat</string>
    <string name="organization">Organisasi</string>
    <string name="profile">Profil</string>
    <string name="quit_application_instruction">Tekan sekali lagi untuk keluar</string>
    <string name="logout">Keluar</string>
    <string name="dummy_string">Upiki</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="cancel">Batal</string>
    <string name="error">Error</string>
    <string name="reload">Refresh</string>

    <!--Login Register-->
    <string name="login_or_register">Masuk/Daftar</string>
    <string name="login_register_success_message">Email Anda telah didaftarkan! Selamat mengemudi!</string>
    <string name="logout_confirmation_message">Apakah Anda yakin ingin keluar dari akun Anda?</string>
    <string name="register_description">Anda belum terdaftar di basis data kami. Silahkan masukkan kelengkapan data Anda</string>

    <!--Organization Register-->
    <string name="no_organization_label">Kamu belum mendaftarkan sebagai organisasi. Apakah anda ingin <b><font color="#B71C1C">mendaftar?</font></b></string>

    <!--Home-->
    <string name="home_payment_method">Metode Pembayaran</string>
    <string name="home_payment_method_prompt">Pilih metode pembayaran</string>
    <string-array name="home_payment_methods">
        <item>Pulsa</item>
        <item>Top-Up</item>
    </string-array>
    <string name="home_top_up">Top-Up</string>
    <string name="home_balance">Pulsa</string>
    <string name="home_mark_as_business">Tandai Perjalanan Bisnis</string>
    <string name="home_user_name">Nama</string>
    <string name="home_current_balance">Sisa Pulsa</string>
    <string name="home_current_top_up">Sisa Saldo</string>
    <string name="home_init_balance">100.000</string>

    <!--History-->
    <string name="history_trip_time">Waktu Perjalanan</string>
    <string name="history_today">Hari ini</string>
    <string name="history_business_trip">Business Trip</string>
    <string-array name="history_trip_times">
        <item>Hari ini</item>
        <item>Kemarin</item>
        <item>1 minggu yang lalu</item>
        <item>1 bulan yang lalu</item>
        <item>> 1 bulan yang lalu </item>
    </string-array>
    <string name="history_init_payment_gate">Nama Gerbang Tol</string>
    <string name="history_init_payment_cost">Rp 3.500</string>
    <string name="history_init_payment_time">1 Juli 2017 (13.50)</string>

    <!--Organization-->
    <string name="organization_member">Daftar Anggota</string>
    <string name="organization_member_label">Anggota</string>

    <!--Transaction-->
    <string name="transaction_label">Transaksi</string>
    <string name="transaction_see_label">Lihat Transaksi</string>

    <!--Member-->
    <string name="add_member">Tambah Member Baru</string>

    <!--Profile-->
    <string name="full_name">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="phone">No Telepon</string>
    <string name="address">Alamat</string>
    <string name="save">Simpan</string>
    <string name="edit_profile">Ubah</string>

    <!--Error-->
    <string name="error_field_required">Form ini harus diisi</string>
    <string name="error_email_format_invalid">Format email salah</string>
    <string name="title_activity_input_user_data">InputUserDataActivity</string>
</resources>