<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" 
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_payment_gate"
                android:layout_width="@dimen/_0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:textSize="@dimen/f_18sp"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginRight="@dimen/_10dp"
                android:layout_marginEnd="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_15dp"
                android:text="@string/history_init_payment_gate"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_history_business_trip"
                android:layout_width="@dimen/_0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/history_business_trip"
                android:textSize="@dimen/f_14sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/green_outer_box"
                android:paddingLeft="@dimen/_5dp"
                android:paddingStart="@dimen/_5dp"
                android:paddingRight="@dimen/_5dp"
                android:paddingEnd="@dimen/_5dp"
                android:layout_marginRight="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_payment_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10dp"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:text="@string/history_init_payment_cost"
            android:textSize="@dimen/f_18sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_payment_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10dp"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginRight="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:text="@string/history_init_payment_time"/>
    </LinearLayout>

</android.support.v7.widget.CardView>