<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.upiki.bayartol.MainActivity">

    <include
        layout="@layout/include_frame_layout_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:paddingTop="@dimen/_5dp"
        android:paddingBottom="@dimen/_5dp"
        android:background="@drawable/main_nav_bar_background">

        <LinearLayout
            android:id="@+id/ll_nav_home"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:clickable="true"
            android:onClick="onNavHomeClicked">

            <ImageView
                android:id="@+id/iv_home_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_home_selected"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/tv_home_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:layout_gravity="center"
                android:textSize="@dimen/f_12sp"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_nav_history"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:clickable="true"
            android:onClick="onNavHistoryClicked">

            <ImageView
                android:id="@+id/iv_history_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_history"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/tv_history_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:layout_gravity="center"
                android:textSize="@dimen/f_12sp"
                android:textColor="@color/default_grey"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_nav_organization"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:clickable="true"
            android:onClick="onNavOrganizationClicked">

            <ImageView
                android:id="@+id/iv_organization_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_organization"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/tv_organization_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organization"
                android:layout_gravity="center"
                android:textSize="@dimen/f_12sp"
                android:textColor="@color/default_grey"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_nav_profile"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:clickable="true"
            android:onClick="onNavProfileClicked">

            <ImageView
                android:id="@+id/iv_profile_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_profile"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/tv_profile_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:layout_gravity="center"
                android:textSize="@dimen/f_12sp"
                android:textColor="@color/default_grey"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
